# optic-fixed

./: README.md
src/: CMakeLists.txt
src/VALfiles/: CMakeLists.txt  Proposition.cpp  Validator.cpp  instantiation.cpp  instantiation.h
src/VALfiles/parsing/: ptree.h
src/optic/: CMakeLists.txt  RPGBuilderNumerics.cpp
